--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
     "ts-loader": "4.2.0",
     "webpack-cli": "^2.1.4",
     "zone.js": "^0.8.26",
-    "cp-cli": "^1.1.0"
+    "cp-cli": "^1.1.0",
+    "@angular/material": "^6.3.3",
+    "@angular/cdk": "^6.3.3",
+    "bootstrap": "^4.1.1"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.3",
