--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.0.3",
+    "@angular/cdk": "^6.3.3",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
+    "@angular/material": "^6.3.3",
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/platform-server": "^6.0.0",
@@ -35,16 +37,15 @@
     "@ng-toolkit/universal": "^1.1.34",
     "@nguniversal/express-engine": "^6.0.0",
     "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
+    "@stackblitz/sdk": "^1.2.0",
+    "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
     "cors": "~2.8.4",
+    "cp-cli": "^1.1.0",
     "rxjs": "^6.0.0",
     "ts-loader": "4.2.0",
     "webpack-cli": "^2.1.4",
-    "zone.js": "^0.8.26",
-    "cp-cli": "^1.1.0",
-    "@angular/material": "^6.3.3",
-    "@angular/cdk": "^6.3.3",
-    "bootstrap": "^4.1.1"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.3",
