--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "core-js": "^2.5.4",
     "cors": "~2.8.4",
     "cp-cli": "^1.1.0",
+    "ngx-highlightjs": "^2.1.1",
     "rxjs": "^6.0.0",
     "ts-loader": "4.2.0",
     "webpack-cli": "^2.1.4",
